--- a/now.json
+++ b/now.json
@@ -16,6 +16,11 @@
       "methods": ["GET"],
       "dest": "/build/$1"
     },
+    {
+      "src": "^/graphql$",
+      "methods": ["GET"],
+      "dest": "/build/graphiql.html"
+    },
     { "src": "^/.*", "methods": ["POST"], "dest": "main.exe" }
   ],
   "comm": [{ "src": "^(/static/.*)", "dest": "build/$1" }],
