--- a/now.json
+++ b/now.json
@@ -12,14 +12,14 @@
   ],
   "routes": [
     {
+      "src": "^/graphql",
+      "methods": ["GET"],
+      "dest": "/build/graphiql.html"
+    },
+    {
       "src": "^/(.*)",
       "methods": ["GET"],
       "dest": "/build/$1"
-    },
-    {
-      "src": "^/graphql$",
-      "methods": ["GET"],
-      "dest": "/graphiql.html"
     },
     { "src": "^/.*", "methods": ["POST"], "dest": "main.exe" }
   ],
